# recording-server

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  todo.txt
flatbuffer_types/schema/: recording.fbs  sfu.fbs
flatbuffers/: schema.fbs
src/: config.rs  main.rs  state.rs  todo.txt
src/misc/: auth.rs  enums.rs  flatbuffer_types.rs  mod.rs  schema_generated.rs
src/models/: bus.rs  channel.rs  ffmpeg.rs  mod.rs  recorder.rs  remote.rs  session.rs  sfu.rs  transcriptor.rs
src/services/: http.rs  mod.rs  rtc.rs
