[package]
name = "recording-server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
axum = { version = "0.7.7", features = ["ws"] }
flatbuffers = "24.3.25"
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0.215", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
futures-util = "0.3.31"
# ffmpeg-next = "7.1.0" (or crafting all command lines and directly use ffmpeg)
